cambios en me.json

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,5 +5,5 @@ const {default:meData} = await import('../assets/me.json');
 
 <Layout>
 	<h1>{meData.nombre}</h1>
-	<h2>{meData.apellidos}</h2>
+	<h2>{meData.profesion}</h2>
 </Layout>
