--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,8 @@
+html{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
 section{
-    max-width: 900;
+    max-width: 900px;
     margin-right: auto;
     margin-left: auto;
 }
