--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,6 +6,10 @@ section{
     margin-right: auto;
     margin-left: auto;
 }
+section h4{
+    font-size: 15px;
+    margin-bottom: 10px;
+}
 .nombre{
     font-size: 45px;
     line-height: 100%;
