--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,24 @@ section h4{
     font-size: 45px;
     line-height: 100%;
 }
+.proyecto{
+    padding: 16px;
+    background-color: rgb(236,236,236);
+    border-radius: 16px;
+    margin-bottom: 16px;
+}
+.proyecto:hover{
+    background-color: rgb(206, 206, 206);
+}
+.enlace-proyecto{
+    text-decoration: none;
+    color: black;
+
+}
+.enlace-proyecto:hover{
+    color: rgb(70,70,70);
+
+}
 .profesion{
     font-size: 30px;
     line-height: 100%;
