cambios en el Header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -49,6 +49,14 @@
       margin: 8px;
       padding: 8px 0;
     }
+
+    li:hover {
+      list-style-type: none;
+      margin: 8px;
+      padding: 8px 0;
+      background-color: grey;
+      border-radius: 8px;
+    }
   
     div {
       display: none;
