--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,9 +2,11 @@ html{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 section{
+
     max-width: 900px;
     margin-right: auto;
     margin-left: auto;
+    margin-top: 84px;
 }
 section h4{
     font-size: 15px;
