--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,24 +1,27 @@
 <footer>
-    <p>
-      Hecho por fjfh, Ver en <a href="https://github.com/fjfh06/portfolio-javi"
-      >github</a
-      >
-      <p>2025</p>
-    </p>
-  
-    <style>
-      footer {
-        display: flex;
-        flex-direction: column;
-        grid-area: footer;
-        background-color: var(--gray-ultra-dark);
-        align-items: center;
-        padding: var(--card-padding);
-      }
-  
-      p {
-        text-align: center;
-        padding: 8px;
-      }
-    </style>
+  <nav>
+    <ul>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+    </ul>
+  </nav>
   </footer>
+  <style>
+    footer {
+      width: 100%;
+      background-color: black;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    nav {
+      padding: 16px;
+      display: flex;
+      flex-direction: row;
+      gap: 16px;
+      align-items: center;
+    }
+  </style>
