--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,10 +1,15 @@
+---
+import Instagram from "./icons/Instagram.astro";
+import Github from "./icons/Github.astro";
+import Linkedin from "./icons/Linkedin.astro";
+---
+---
 <footer>
   <nav>
     <ul>
-      <li><a href=""></a></li>
-      <li><a href=""></a></li>
-      <li><a href=""></a></li>
-      <li><a href=""></a></li>
+      <li><a href=""><Instagram /></a></li>
+      <li><a href=""><Github /></a></li>
+      <li><a href=""><Linkedin /></a></li>
     </ul>
   </nav>
   </footer>
@@ -17,7 +22,8 @@
       flex-direction: column;
       align-items: center;
     }
-    nav {
+    ul {
+      width: fit-content;
       padding: 16px;
       display: flex;
       flex-direction: row;
