--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,12 +1,13 @@
 html{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    scroll-behavior: smooth;
 }
 section{
 
     max-width: 900px;
     margin-right: auto;
     margin-left: auto;
-    margin-top: 84px;
+    padding-top: 54px;
 }
 section h4{
     font-size: 15px;
@@ -45,8 +46,6 @@ section h4{
     margin-bottom: 20px;
 }
 .experiencia{
-    margin-left: 160px;
-    margin-right: 200px;
     margin-top: 20px;
     padding: 15px;
     background-color: #ccc;
